fixed navbar missing home on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,11 @@ body {
   background: -webkit-linear-gradient(0deg, rgba(230,244,245,1) 0%, rgba(255,255,255,1) 100%);
   background: linear-gradient(0deg, rgba(230,244,245,1) 0%, rgba(255,255,255,1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#e6f4f5",endColorstr="#ffffff",GradientType=1);
-  height: 100vh;
+  min-height: 100vh;
 }
 
 
-
+/* ------------------ General settings ------------------- */
 
 /* remove text decorations from links */
 :hover{
@@ -23,16 +23,18 @@ a {
   text-decoration: none !important; /* no underline */
 }
 
-/* lang bar */
-.langBAR {
-  position: absolute;
-  right: 15px;
-  top: 20px;
+@media (min-width: 1450px) {
+  .container {
+    max-width: 1400px !important;
+  }
+}
+
+p {
+  margin-bottom: 0.5rem;
 }
 
 
 /* Font details */
-
 
   .title {
     font-weight: 800;
@@ -62,8 +64,7 @@ a {
 
   }
 
-
-/*  NavBar */
+/* ------------------ NavBar ------------------- */
 .navBar {
   font-weight: 600;
   padding: 2vh 0vw 2vh 3vw !important;
@@ -90,7 +91,6 @@ a {
       display:none !important;
     }
   }
-
 
   .borderNAVLangBTN {
     border: 2px solid !important;
@@ -150,20 +150,14 @@ a {
     }
 
 
-
-/* ---------- BootStrap -------- */
-
-@media (min-width: 1450px) {
-  .container {
-    max-width: 1400px !important;
-  }
-}
-
-p {
-  margin-bottom: 0.5rem;
+    /* lang bar */
+.langBAR {
+  position: absolute;
+  right: 15px;
+  top: 20px;
 }
     
-/*-------- Home --------*/
+/*-------------------- Home ------------------*/
 
 .stackWrapper {
   width: 70vw;
@@ -182,7 +176,7 @@ p {
     width:40vw;
   }
   .stackWrapperWrapper{
-    padding-top: 30vh ;
+    padding-top: 20vh ;
   }
   .techContainer * {
     padding: 7px !important;
